[tool.poetry]
name = "orbit_simulation"
version = "0.1.0"
description = ""
authors = ["John-Masi <johnrmasi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.3"
matplotlib = "^3.10.6"
pandas = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
