[tool.poetry]
name = "orbit-simulation"
version = "0.1.0"
description = ""
authors = ["John-Masi <johnrmasi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.6"
numpy = "^2.3.3"
pandas = "^2.3.2"
scikit-image = "^0.25.2"
pyqt5 = "^5.15.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
